--- a/generators/app/package.json
+++ b/generators/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polymer-starter-kit-custom-build-es6",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ES6 support for Polymer 1.0 custom build apps, written on top of Rob Dodson's polymer-starter-kit-custom-build plugin.",
   "repository": {
     "type": "git",
@@ -19,8 +19,11 @@
     "babel-preset-es2015-script": "^1.1.0",
     "del": "^2.2.1",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.1",
+    "gulp-uglify": "^2.0.0",
     "merge-stream": "^1.0.0",
     "plylog": "^0.4.0",
     "polymer-build": "^0.4.0"
